Fix profile icon z-index and background color in Account page

--- a/app/imports/pages/account/acounts.css
+++ b/app/imports/pages/account/acounts.css
@@ -5,14 +5,16 @@
     /* margin-top: 50px;
     margin-bottom: 50px; */
     cursor: pointer;
+    background-color: #d1d5db; /* gray-300 */
     background-image: url(/icons/emptyprofilepic.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
     border: 4px solid #7E7D7D;
     padding: 8px;
-    text-align: center; 
-
+    text-align: center;
+    position: relative;
+    z-index: 10;
   }
 
   .umsapp .profile-link {
